--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "isi_chat"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^5.0.6"
+djangorestframework = "^3.15.1"
+black = "^24.4.2"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
